Index link replace

--- a/membersearch.html
+++ b/membersearch.html
@@ -134,7 +134,7 @@
                         <div id="logo" class="m-auto">
                             <!-- Uncomment below if you prefer to use a text logo -->
                             <!-- <h1><a href="#main">C<span>o</span>nf</a></h1>-->
-                            <a href="index-2.html" class="scrollto">
+                            <a href="index.html" class="scrollto">
                                 <img src="assets/img/samaj_logo.png" alt="" title="" /></a>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                                 <ul class="nav-menu">
                                     <li id="home_mb" class="d-none mb_d_block"><a href="login.html">My Account &nbsp;<i class="fa fa-arrow-down dark_icon"></i></a></li>
 
-                                    <li id="home"><a href="index-2.html">Home</a></li>
+                                    <li id="home"><a href="index.html">Home</a></li>
                                     <li id="members"><a href="membersearch.html">Parichay Granth</a></li>
                                     <li id="matrimonial"><a href="matrimonial.html">Matrimonial</a></li>
                                     <li id="business"><a href="searchbusiness.html">Business</a></li>
@@ -1307,7 +1307,7 @@
                         <div class="col-lg-6 col-md-6 footer-links">
                             <h4>Useful Links</h4>
                             <ul class="row">
-                                <li><i class="fa fa-angle-right"></i><a href="index-2.html">Home</a></li>
+                                <li><i class="fa fa-angle-right"></i><a href="index.html">Home</a></li>
                                 <li class="col-6"><i class="fa fa-angle-right"></i><a href="matrimonial.html">Matrimonial</a></li>
                                 <li class="col-6"><i class="fa fa-angle-right"></i><a href="searchblood.html">Find Blood Donar</a></li>
                                 <li class="col-6"><i class="fa fa-angle-right"></i><a href="search_job.html">Search Job</a></li>
